--- a/style.css
+++ b/style.css
@@ -727,7 +727,7 @@ body{
      height: 450px; 
 
     padding: 30px 20px 20px;
-    /* margin: 0px 10px; */
+    margin: 0px 10px;
 
     position: relative;
     background: var(--color-white);
